# rustflappybirb

./: Cargo.toml  README.md
assets/configs/: game_config.ron  window_config.ron
src/: main.rs
src/configs/: game_config.rs  mod.rs  window_config.rs
src/game/: debug_config.rs  level.rs  mod.rs  physics.rs  player.rs  score.rs  state.rs
