[package]
name = "rustflappybirb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = '0.7.0'
bevy-inspector-egui = "0.10.0"
serde = "1.0"
ron = "0.7"
heron = { version = "3.1.0", default-features = false, features = ["2d"] }
rand = "0.8.5"
bevy_asset_ron = "0.4"

[profile.dev.package."*"]
opt-level = 3